# clonebuildregister

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.rst  environment.yaml  environment.yml  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml
bimage/: __init__.py  __main__.py  bimage.py  buildImage.py  build_image.py  cloneRepo.py  clone_repo.py  exceptions.py  registerImage.py  register_image.py
bimage/test/: Dockerfile  __main__.py  cloneRepoTestEnv.env  test_bimage.py  test_buildImage.py  test_build_image.py  test_cloneRepo.py  test_clone_repo.py  test_exceptions.py  test_registerImage.py  test_register_image.py
bimage/test/testArgDockerfile/: Dockerfile
bimage/tests/: __init__.py  __main__.py  cloneRepoTest.py
clonebuildregister/: __init__.py  __main__.py  build_image.py  clone_repo.py  clonebuildregister.py  exceptions.py  register_image.py
clonebuildregister/test/: __init__.py  test_bimage.py  test_build_image.py  test_clone_repo.py  test_clonebuildregister.py  test_exceptions.py  test_register_image.py  testing_variables.py
clonebuildregister/test/buildImageTestFolder/: cloneRepoTestEnv.env
clonebuildregister/test/testArgDockerfile/: greetings.sh
conda-build/: meta.yaml
src/clonebuildregister/: __init__.py  __main__.py  _version.py  build_image.py  clone_repo.py  clonebuildregister.py  exceptions.py  register_image.py
tests/: test_build_image.py  test_clone_repo.py  test_clonebuildregister.py  test_exceptions.py  test_register_image.py  testing_variables.py
